--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ torch = "^1.7.1"
 matplotlib = "^3.3.3"
 fastcore = "^1.3.16"
 pytorch-lightning = "^1.1.2"
+sklearn = "^0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
