--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ matplotlib = "^3.3.3"
 fastcore = "^1.3.16"
 pytorch-lightning = "^1.1.2"
 sklearn = "^0.0"
+tqdm = "^4.55.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
