--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ fastcore = "^1.3.16"
 pytorch-lightning = "^1.1.2"
 sklearn = "^0.0"
 tqdm = "^4.55.1"
+torchvision = "^0.8.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
