--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ mypy = "^0.790"
 codecov = "^2.1.10"
 black = "^20.8b1"
 flake8 = "^3.8.4"
+twine = "^3.3.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
