--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytorch-lightning = "^1.1.2"
 sklearn = "^0.0"
 torchvision = "^0.8.2"
 importlib_resources = "^5.0.0"
+tqdm = "^4.56.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
