--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ codecov = "^2.1.10"
 black = "^20.8b1"
 flake8 = "^3.8.4"
 twine = "^3.3.0"
+pydocstyle = "^5.1.1"
+pylint = "^2.6.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
