--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "loss-landscape-anim"
-version = "0.1.9"
+version = "0.1.10"
 description = "Animate the optimization trajectory of neural networks"
 authors = ["LoganYang <logancyang@gmail.com>"]
 keywords = [
@@ -15,12 +15,12 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 numpy = "^1.26.3"
 torch = "^2.1.2"
 matplotlib = "^3.8.2"
 pytorch-lightning = "^2.1.3"
-sickit_learn = "^1.4.0"
+scikit-learn = "^1.4.0"
 torchvision = "^0.16.2"
 importlib_resources = "^6.1.1"
 tqdm = "^4.66.1"
@@ -28,7 +28,6 @@ tqdm = "^4.66.1"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 pytest-cov = "^2.10.1"
-mypy = "^0.790"
 codecov = "^2.1.10"
 black = "^20.8b1"
 flake8 = "^3.8.4"
